Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm
@@ -590,7 +590,7 @@ static WKErrorCode callbackErrorCode(WebKit::CallbackBase::Error error)
 {
     auto handler = adoptNS([completionHandler copy]);
 
-    _page->runJavaScriptInMainFrame(javaScriptString, [handler](API::SerializedScriptValue* serializedScriptValue, WebKit::ScriptValueCallback::Error errorCode) {
+    _page->runJavaScriptInMainFrame(javaScriptString, [handler](API::SerializedScriptValue* serializedScriptValue, bool hadException, WebKit::ScriptValueCallback::Error errorCode) {
         if (!handler)
             return;
 
@@ -613,8 +613,14 @@ static WKErrorCode callbackErrorCode(WebKit::CallbackBase::Error error)
         }
 
         auto rawHandler = (void (^)(id, NSError *))handler.get();
-        if (!serializedScriptValue) {
+        if (hadException) {
+            ASSERT(!serializedScriptValue);
             rawHandler(nil, createNSError(WKErrorJavaScriptExceptionOccurred).get());
+            return;
+        }
+
+        if (!serializedScriptValue) {
+            rawHandler(nil, createNSError(WKErrorJavaScriptResultTypeIsUnsupported).get());
             return;
         }
 
